DEV-854 Refactor bcl2fastq code into a separate module
Create a separate module for the main classes of bcl2fastq.